--- a/package.json
+++ b/package.json
@@ -8,9 +8,18 @@
 
     "devDependencies": {
         "esbuild": "0.19.11",
-        "@esbuild-kit/esm-loader": "2.6.5"
+        "esbuild-register": "3.5.0",
+        "@esbuild-kit/esm-loader": "2.6.5",
+
+        "chai": "5.0.0",
+        "mocha": "10.2.0",
+        "@types/chai": "4.3.11",
+        "@types/mocha": "10.0.6",
+        "@types/node": "20.10.7"
     },
     "scripts": {
-        "ts": "node --experimental-loader=@esbuild-kit/esm-loader"
+        "ts": "node --loader @esbuild-kit/esm-loader",
+        "test:mocha": "mocha --require esbuild-register test/**/*-test.ts",
+        "test": "npm run test:mocha"
     }
 }
